# Streamer

./: CMakeLists.txt  README.md  main.cpp  run-rstp.sh
src/: AVFoundationInput.cpp  AVFoundationInput.hpp  CMakeLists.txt  FFmpegError.cpp  FFmpegError.hpp  FileOutput.cpp  FileOutput.hpp  VideoDecoder.cpp  VideoDecoder.hpp
